tests/invalid/lexer_invalid_escape_sequence.wio
fn Entry(args: string[]) -> i32 {
    let bad = "\q";
    return 0;
}
